--- a/store.html
+++ b/store.html
@@ -8,75 +8,116 @@
 		/>
 		<meta name="description" content="This is the description" />
 		<title>The Beatles | Store</title>
+		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body>
-		<header>
-			<nav>
+		<header class="main-header">
+			<nav class="main-nav nav">
 				<ul>
 					<li><a href="./index.html">HOME</a></li>
 					<li><a href="./store.html">STORE</a></li>
 					<li><a href="./about.html">ABOUT</a></li>
 				</ul>
 			</nav>
-			<hr />
-			<h1>THE BEATLES</h1>
+			<h1 class="band-name band-name-large">THE BEATLES</h1>
 		</header>
-		<section>
-			<h2>MUSIC</h2>
-			<div>
-				<strong>Album 1</strong>
-			</div>
-			<img src="./images/Album 1.png" alt="Album 1 cover" />
-			<div>
-				<span>$12.99</span>
-				<button role="button">ADD TO CART</button>
-			</div>
-			<div>
-				<strong>Album 2</strong>
-			</div>
-			<img src="./images/Album 2.png" alt="Album 2 cover" />
-			<div>
-				<span>$14.99</span>
-				<button role="button">ADD TO CART</button>
-			</div>
-			<div>
-				<strong>Album 3</strong>
-			</div>
-			<img src="./images/Album 3.png" alt="Album 3 cover" />
-			<div>
-				<span>$9.99</span>
-				<button role="button">ADD TO CART</button>
-			</div>
-			<div>
-				<strong>Album 4</strong>
-			</div>
-			<img src="./images/Album 4.png" alt="Album 4 cover" />
-			<div>
-				<span>$19.99</span>
-				<button role="button">ADD TO CART</button>
+		<section class="container content-section">
+			<h2 class="section-header">MUSIC</h2>
+			<div class="shop-items">
+				<div class="shop-item">
+					<span class="shop-item-title">Album 1</span>
+					<img
+						class="shop-item-image"
+						src="./images/Album 1.png"
+						alt="Album 1 cover"
+					/>
+					<div class="shop-item-details">
+						<span class="shop-item-price">$12.99</span>
+						<button
+							class="btn btn-primary shop-item-btn"
+							role="button"
+						>
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Album 2</span>
+					<img
+						class="shop-item-image"
+						src="./images/Album 2.png"
+						alt="Album 2 cover"
+					/>
+					<div class="shop-item-details">
+						<span class="shop-item-price">$14.99</span>
+						<button
+							class="btn btn-primary shop-item-btn"
+							role="button"
+						>
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Album 3</span>
+					<img
+						class="shop-item-image"
+						src="./images/Album 3.png"
+						alt="Album 3 cover"
+					/>
+					<div class="shop-item-details">
+						<span class="shop-item-price">$9.99</span>
+						<button
+							class="btn btn-primary shop-item-btn"
+							role="button"
+						>
+							ADD TO CART
+						</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Album 4</span>
+					<img
+						class="shop-item-image"
+						src="./images/Album 4.png"
+						alt="Album 4 cover"
+					/>
+					<div class="shop-item-details">
+						<span class="shop-item-price">$19.99</span>
+						<button
+							class="btn btn-primary shop-item-btn"
+							role="button"
+						>
+							ADD TO CART
+						</button>
+					</div>
+				</div>
 			</div>
 		</section>
-		<h2>MERCH</h2>
-		<section>
-			<div>
-				<strong>T-Shirt</strong>
-			</div>
-			<img src="./images/Shirt.png" alt="Shirt Picture" />
-			<div>
-				<span>$19.99</span>
-				<button role="button">ADD TO CART</button>
-			</div>
-			<div>
-				<strong>Coffee Cup</strong>
-			</div>
-			<img src="./images/Cofee.png" alt="Album 1 cover" />
-			<div>
-				<span>$6.99</span>
-				<button role="button">ADD TO CART</button>
+		<section class="container content-section">
+			<h2 class="section-header">MERCH</h2>
+			<div class="shop-items">
+				<div class="shop-item">
+					<span class="shop-item-title">T-Shirt</span>
+					<img class="shop-item-image" src="./images/Shirt.png" alt="Shirt Picture" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$19.99</span>
+						<button class="btn btn-primary shop-item-btn" type="button">ADD TO CART</button>
+					</div>
+				</div>
+				<div class="shop-item">
+					<span class="shop-item-title">Coffee Cup</span>
+					<img class="shop-item-image" src="./images/Cofee.png" alt="Coffee Picture" />
+					<div class="shop-item-details">
+						<span class="shop-item-price">$6.99</span>
+						<button class="btn btn-primary shop-item-btn" type="button">ADD TO CART</button>
+					</div>
+				</div>
 			</div>
 		</section>
-		<section>
-			<h2>CART</h2>
+		<section class="container content-section">
+			<h2 class="section-header">CART</h2>
+			<div>
 			<div>
 				<strong>ITEM</strong>
 				&lt;&gt;
