--- a/store.html
+++ b/store.html
@@ -99,98 +99,146 @@
 			<div class="shop-items">
 				<div class="shop-item">
 					<span class="shop-item-title">T-Shirt</span>
-					<img class="shop-item-image" src="./images/Shirt.png" alt="Shirt Picture" />
+					<img
+						class="shop-item-image"
+						src="./images/Shirt.png"
+						alt="Shirt Picture"
+					/>
 					<div class="shop-item-details">
 						<span class="shop-item-price">$19.99</span>
-						<button class="btn btn-primary shop-item-btn" type="button">ADD TO CART</button>
+						<button
+							class="btn btn-primary shop-item-btn"
+							type="button"
+						>
+							ADD TO CART
+						</button>
 					</div>
 				</div>
 				<div class="shop-item">
 					<span class="shop-item-title">Coffee Cup</span>
-					<img class="shop-item-image" src="./images/Cofee.png" alt="Coffee Picture" />
+					<img
+						class="shop-item-image"
+						src="./images/Cofee.png"
+						alt="Coffee Picture"
+					/>
 					<div class="shop-item-details">
 						<span class="shop-item-price">$6.99</span>
-						<button class="btn btn-primary shop-item-btn" type="button">ADD TO CART</button>
+						<button
+							class="btn btn-primary shop-item-btn"
+							type="button"
+						>
+							ADD TO CART
+						</button>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class="container content-section">
 			<h2 class="section-header">CART</h2>
-			<div>
-			<div>
-				<strong>ITEM</strong>
-				&lt;&gt;
-				<strong>PRICE</strong>
-				&lt;&gt;
-				<strong>QUANTITY</strong>
+			<div class="cart-row">
+				<span class="cart-item cart-header cart-column"
+					>ITEM</span
+				>
+				<span class="cart-price cart-header cart-column"
+					>PRICE</span
+				>
+				<span class="cart-quantity cart-header cart-column"
+					>QUANTITY</span
+				>
 			</div>
-			<div>
-				<img
-					src="./images/Shirt.png"
-					width="100"
-					height="100"
-					alt="T-Shirt Pic"
-				/>
-				<span>T-Shirt</span>
-				&lt;&gt;
-				<span>$19.90</span>
-				&lt;&gt;
-				<input type="number" value="1" />
-				<button role="button">REMOVE</button>
+			<div class="cart-items">
+				<div class="cart-row">
+					<div class="cart-item cart-column">
+						<img
+							class="cart-item-image"
+							src="./images/Shirt.png"
+							width="100"
+							height="100"
+							alt="T-Shirt Pic"
+						/>
+						<span class="cart-item-title">T-Shirt</span>
+					</div>
+					<span class="cart-price cart-column">$19.99</span>
+					<div class="cart-quantity cart-column">
+						<input
+							class="cart-quantity-input"
+							type="number"
+							value="1"
+						/>
+						<button
+							class="btn btn-danger"
+							type="button"
+						>
+							REMOVE
+						</button>
+					</div>
+				</div>
+				<div class="cart-row">
+					<div class="cart-item cart-column">
+						<img
+							class="cart-item-image"
+							src="./images/Album 3.png"
+							width="100"
+							height="100"
+							alt="Album 3 pic"
+						/>
+						<span class="cart-item-title">Album 3</span>
+					</div>
+					<span class="cart-price cart-column">$9.99</span>
+					<div class="cart-quantity cart-column">
+						<input
+							class="cart-quantity-input"
+							type="number"
+							value="2"
+						/>
+						<button
+							class="btn btn-danger"
+							type="button"
+						>
+							REMOVE
+						</button>
+					</div>
+				</div>
 			</div>
-			<div>
-				<img
-					src="./images/Album 3.png"
-					width="100"
-					height="100"
-					alt="album 3 Pic"
-				/>
-				<span>Album 3</span>
-				&lt;&gt;
-				<span>$9.90</span>
-				&lt;&gt;
-				<input type="number" value="2" />
-				<button role="button">REMOVE</button>
+			<div class="cart-total">
+				<strong class="cart-total-title">Total</strong>
+				<span class="cart-total-price">$39.97</span>
 			</div>
-			<hr />
-			<div>
-				<strong>Total</strong>
-				<span>$39.97</span>
-			</div>
-			<div>
-				<button>PURCHASE</button>
-			</div>
+			<button class="btn btn-primary btn-purchase">PURCHASE</button>
 		</section>
-		<footer>
-			<h3>The Beatles</h3>
-			<ul>
-				<li>
-					<a href="https://www.youtube.com/" target="_blank"
-						><img
-							src="./images/YouTube Logo.png"
-							alt="Youtube Logo"
-					/></a>
-				</li>
-				<li>
-					<a
-						href="https://www.spotify.com/my-en/"
-						target="_blank"
-						><img
-							src="./images/Spotify Logo.png"
-							alt="Spotify Logo"
-					/></a>
-				</li>
-				<li>
-					<a
-						href="https://www.facebook.com/"
-						target="_blank"
-						><img
-							src="./images/Facebook Logo.png"
-							alt="Facebook Logo"
-					/></a>
-				</li>
-			</ul>
+		<footer class="main-footer">
+			<div class="container main-footer-container">
+				<h3 class="band-name">The Beatles</h3>
+				<ul class="nav footer-nav">
+					<li>
+						<a
+							href="https://www.youtube.com/"
+							target="_blank"
+							><img
+								src="./images/YouTube Logo.png"
+								alt="Youtube Logo"
+						/></a>
+					</li>
+					<li>
+						<a
+							href="https://www.spotify.com/my-en/"
+							target="_blank"
+							><img
+								src="./images/Spotify Logo.png"
+								alt="Spotify Logo"
+						/></a>
+					</li>
+					<li>
+						<a
+							href="https://www.facebook.com/"
+							target="_blank"
+							><img
+								src="./images/Facebook Logo.png"
+								alt="Facebook Logo"
+						/></a>
+					</li>
+				</ul>
+			</div>
 		</footer>
 	</body>
 </html>
