--- a/store.html
+++ b/store.html
@@ -9,6 +9,7 @@
 		<meta name="description" content="This is the description" />
 		<title>The Beatles | Store</title>
 		<link rel="stylesheet" href="./styles.css" />
+		<script src="./store.js" async></script>
 	</head>
 	<body>
 		<header class="main-header">
@@ -146,63 +147,10 @@
 					>QUANTITY</span
 				>
 			</div>
-			<div class="cart-items">
-				<div class="cart-row">
-					<div class="cart-item cart-column">
-						<img
-							class="cart-item-image"
-							src="./images/Shirt.png"
-							width="100"
-							height="100"
-							alt="T-Shirt Pic"
-						/>
-						<span class="cart-item-title">T-Shirt</span>
-					</div>
-					<span class="cart-price cart-column">$19.99</span>
-					<div class="cart-quantity cart-column">
-						<input
-							class="cart-quantity-input"
-							type="number"
-							value="1"
-						/>
-						<button
-							class="btn btn-danger"
-							type="button"
-						>
-							REMOVE
-						</button>
-					</div>
-				</div>
-				<div class="cart-row">
-					<div class="cart-item cart-column">
-						<img
-							class="cart-item-image"
-							src="./images/Album 3.png"
-							width="100"
-							height="100"
-							alt="Album 3 pic"
-						/>
-						<span class="cart-item-title">Album 3</span>
-					</div>
-					<span class="cart-price cart-column">$9.99</span>
-					<div class="cart-quantity cart-column">
-						<input
-							class="cart-quantity-input"
-							type="number"
-							value="2"
-						/>
-						<button
-							class="btn btn-danger"
-							type="button"
-						>
-							REMOVE
-						</button>
-					</div>
-				</div>
-			</div>
+			<div class="cart-items"></div>
 			<div class="cart-total">
 				<strong class="cart-total-title">Total</strong>
-				<span class="cart-total-price">$39.97</span>
+				<span class="cart-total-price">$0</span>
 			</div>
 			<button class="btn btn-primary btn-purchase">PURCHASE</button>
 		</section>
